# weak4_template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: buffer.hpp  dangling.hpp  file_raii.hpp  nrvo.hpp  odr.hpp  valref.hpp
src/: buffer.cpp  dangling.cpp  file_raii.cpp  nrvo.cpp  odr_x.cpp  odr_y.cpp  valref.cpp
tests/: buffer_tests.cpp  dangling_tests.cpp  file_raii_tests.cpp  nrvo_tests.cpp  odr_tests.cpp  valref_tests.cpp
